--- a/templates/movie.html
+++ b/templates/movie.html
@@ -286,8 +286,8 @@
 <body>
     <main>
         <section class="info">
-            <img src="{{poster}}" alt="{{name}} poster" class="poster">
-            <img src="{{logo}}" alt="{{name}} logo" class="logo">
+            <img src="/proxy/cache/?url={{poster}}" alt="{{name}} poster" class="poster">
+            <img src="/proxy/cache/?url={{logo}}" alt="{{name}} logo" class="logo">
         </section>
 
         <section class="watch">
