--- a/app/html_pages/templates/index.html
+++ b/app/html_pages/templates/index.html
@@ -34,8 +34,10 @@
         }
 
         body {
-            background-color: var(--bg-dark);
-            color: var(--text);
+            /* background-color: var(--bg-dark); */
+            /* color: var(--text); */
+            background-color: #0f0f13;
+            color: #eaeaea;
         }
 
         a {
