--- a/app/html_pages/templates/series.html
+++ b/app/html_pages/templates/series.html
@@ -33,8 +33,10 @@
         }
 
         body {
-            background-color: var(--bg-dark);
-            color: var(--text);
+            /* background-color: var(--bg-dark); */
+            /* color: var(--text); */
+            background-color: #0f0f13;
+            color: #eaeaea;
         }
 
         main {
